<resources>
    <string name="app_name">RoadDocManagement</string>
    <string name="image_content_description">image</string>
    <string name="aplicatie_rutiera">Aplicatie Rutiera</string>
    <string name="let_s_get_started_text">Let\'s get started!</string>
    <string name="intro_text_description">Efficiently store and manage all
        your road documents with simplicity and safety.</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sing_in_description_text">Enter your name, email id and password , to register with us.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>
    <string name="nav_my_profile">My profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="full_address">City, street, number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="full_date_of_birth">dd/mm/yyyy</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="floating_add_button">Floating ADD button</string>
    <string name="image_contentDescription" />

    <string name="no_boards_available">No Boards are available!!!</string>

    <string name="action_add_doc_type">Add Document Type (Auto/Personal)</string>
    <string name="hint_doc_type">Document Type</string>
    <string name="action_add_document">Add Document</string>
    <string name="hint_document_name">Document Name</string>
    <string name="image_contentDescription_done_edit_list">done edit list</string>
    <string name="image_contentDescription_X_doc_type_button">X car name</string>
    <string name="image_contentDescription_X_image_button">X image button</string>
    <string name="image_contentDescription_pencil_doc_type">pencil car name</string>
    <string name="image_contentDescription_delete_doc_type_button">"delete car name "</string>
    <string name="image_contentDescription_select_photo">Select photo from gallery</string>

    <string name="due_date">Expiration Date</string>
    <string name="select_due_date">Select Expiration Date</string>

    <string name="delete_document">Delete Document</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete document \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_notification_channel_id">roadDocManagement_notification_channel_id</string>


</resources>