<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/doc_type_cv_elevation"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_doc_type_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_list_action_color"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/action_add_doc_type"
            android:padding="@dimen/doc_type_add_item_text_padding"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/doc_type_add_item_text_size"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_doc_type_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/doc_type_cv_margin"
            android:elevation="@dimen/doc_type_cv_elevation"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/doc_type_cv_corner_radius"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_close_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription_X_doc_type_button"
                    android:padding="@dimen/doc_type_image_buttons_padding"
                    android:src="@drawable/ic_cancel" />

                <EditText
                    android:id="@+id/et_doc_type_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="@string/hint_doc_type"
                    android:hint="@string/hint_doc_type"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/ib_done_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription_done_edit_list"
                    android:padding="@dimen/doc_type_image_buttons_padding"
                    android:src="@drawable/ic_done" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_doc_type_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_list_action_color"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_list_title_view_bg_color"
                android:elevation="@dimen/doc_type_title_view_elevation"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_doc_type_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/doc_type_title_text_padding"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/doc_type_title_text_size"
                    tools:text="Title" />

                <ImageButton
                    android:id="@+id/ib_edit_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription_pencil_doc_type"
                    android:padding="@dimen/doc_type_image_buttons_padding"
                    android:src="@drawable/ic_edit" />

                <ImageButton
                    android:id="@+id/ib_delete_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription_delete_doc_type_button"
                    android:padding="@dimen/doc_type_image_buttons_padding"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/doc_type_divider_height"
                android:background="@color/divider_color" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_edit_doc_type_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/doc_type_cv_margin"
                android:elevation="@dimen/doc_type_cv_elevation"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/doc_type_cv_corner_radius"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_editable_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription_X_doc_type_button"
                        android:padding="@dimen/doc_type_image_buttons_padding"
                        android:src="@drawable/ic_cancel" />

                    <EditText
                        android:id="@+id/et_edit_doc_type_name"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_doc_type"
                        android:hint="@string/hint_doc_type"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_done_edit_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription_done_edit_list"
                        android:padding="@dimen/doc_type_image_buttons_padding"
                        android:src="@drawable/ic_done" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_doc_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/doc_type_rv_card_list_margin" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/doc_type_cv_margin"
                android:elevation="@dimen/doc_type_cv_elevation"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/doc_type_cv_corner_radius"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_doc_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription_X_image_button"
                        android:padding="@dimen/doc_type_image_buttons_padding"
                        android:src="@drawable/ic_cancel"
                        />

                    <EditText
                        android:id="@+id/et_doc_name"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_document_name"
                        android:hint="@string/hint_document_name"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_done_doc_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription_done_edit_list"
                        android:padding="@dimen/doc_type_image_buttons_padding"
                        android:src="@drawable/ic_done" />
                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/ib_select_photo"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_contentDescription_select_photo"
                android:padding="@dimen/doc_type_image_buttons_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/photo_select"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tv_add_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_list_action_color"
                android:elevation="@dimen/doc_type_add_card_text_elevation"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/doc_type_add_item_text_padding"
                android:text="@string/action_add_document"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/doc_type_add_item_text_size"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>